RESOLVED FIXED125299
[GTK] Fix GObject introspection warnings in webkitspellchecker
https://bugs.webkit.org/show_bug.cgi?id=125299
Summary [GTK] Fix GObject introspection warnings in webkitspellchecker
Carlos Garcia Campos
Reported 2013-12-05 04:16:21 PST
Source/WebKit/gtk/webkit/webkitspellchecker.cpp:43: Warning: WebKit: missing ":" at column 45: * @misspelling_location: (out) (allow-none) a pointer to an integer to store the location of the first misspelling ^ Source/WebKit/gtk/webkit/webkitspellchecker.cpp:44: Warning: WebKit: missing ":" at column 43: * @misspelling_length: (out) (allow-none) a pointer to an integer to store the length of the first misspelling ^ Source/WebKit/gtk/webkit/webkitspellchecker.cpp:66: Warning: WebKit: missing ":" at column 26: * @context: (allow-none) the surrounding context of the misspelled word ^ Source/WebKit/gtk/webkit/webkitspellchecker.cpp:92: Warning: WebKit: missing ":" at column 28: * @languages: (allow-none) a string of languages to use for @checker ^ Source/WebKit/gtk/webkit/webkitspellchecker.cpp:116: Warning: WebKit: missing ":" at column 28: * Returns: (transfer full) the suggestion for the autocorrection of ^
Attachments
Patch (2.97 KB, patch)
2013-12-05 04:18 PST, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2013-12-05 04:18:06 PST
Carlos Garcia Campos
Comment 2 2013-12-05 05:25:56 PST
Note You need to log in before you can comment on or make changes to this bug.