[GTK] Fix GObject introspection warnings in webkitspellchecker https://bugs.webkit.org/show_bug.cgi?id=125299

Reviewed by Philippe Normand.

* webkit/webkitspellchecker.cpp: Add missing ':' after some
gobject-introspection annotations.

Canonical link: https://commits.webkit.org/143394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160171 268f45cc-cd09-0410-ab3c-d52691b4dbfc